--- a/BlackJack v1.0/doublePlayer.html
+++ b/BlackJack v1.0/doublePlayer.html
@@ -56,7 +56,7 @@
 			<button type="button"  id="deal" onclick="deal()">DEAL</button>
 		</div>
 		<div class="home">
-			<button type="button" id="home_btn" onclick="window.open('Home.html', '_self')">HOME</button>
+			<button type="button" id="home_btn" onclick="window.open('index.html', '_self')">HOME</button>
 		</div>
 	</div>		
 
