single to index

--- a/BlackJack_v1.1(mobile)/singlePlayer.html
+++ b/BlackJack_v1.1(mobile)/singlePlayer.html
@@ -48,7 +48,7 @@
 			<button type="button"  id="deal" onclick="deal()">DEAL</button>
 		</div>
 		<div class="home">
-			<button type="button" id="home_btn" onclick="window.open('Home.html', '_self')">HOME</button>
+			<button type="button" id="home_btn" onclick="window.open('index.html', '_self')">HOME</button>
 		</div>
 	</div>
 	<div class="pop"></div>
