firefox img bug

--- a/BlackJack v1.0/index.html
+++ b/BlackJack v1.0/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div id="wrapper">
 		<div id="inner_wrap">
-			<img id="gameIcon" src="UI-images\gameIcon.png" alt="gameIcon">
+			<img id="gameIcon" src="UI-images/gameIcon.png" alt="gameIcon">
 			<!-- <div class="introduce">
 				<p>Game Introduce</p>
 			</div>	 -->	
