--- a/JumpySafyPPT/index.html
+++ b/JumpySafyPPT/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Jumpy Safy!</title>
 	<script src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script> 
 	<script src="http://www.css88.com/doc/underscore/underscore-min.js"></script>
 	<link rel="stylesheet" href="ppt.css">
 	<meta name="screen-orientation" content="landscape">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 </head>
 <body>	
 	<img id="backIcon" src="manIcon.png" alt="manIcon">
+		
+	</div>
 	<div class="present" id="first_page">
 		<h1>安仔跳跳</h1>
 		<h1>Jumpy Safy</h1>
@@ -33,10 +36,10 @@
 		</div>	
 	</div>
 	<div class="future" >
-		<h1>游戏展示</h1>
+		<h1 class="center">游戏展示</h1>
 		<h2>
 			安仔跳跳
-			<a href="">>></a>
+			<a href="./Jump_Safy/mainPage.html" target="_blank">>></a>
 		</h2>
 	</div>
 	<div class="future">
@@ -77,39 +80,16 @@
 	</div>
 	<div class="future" >
 		<h1>界面设计</h1>
-		<h2>画面风格：轻萌系</h2>
+		<h2>画面风格：萌系</h2>
 		<div class="icons">
-			<img src="time.png" alt="icon1">
-			<img src="manIcon.png" alt="icon2">
-			<img src="bar.jpg" alt="icon3">
+			<img src="img/safy.png" alt="icon1">
+			<img src="img/success.png" alt="icon2">
+			<img src="img/fail.png" alt="icon3">
 		</div>
 	</div>
 	<div class="future" >
-		<h1>技术要点</h1>
-		<div  class="content">		
-			<p>柱子的组件化</p>
-			<p>小鸟的移动</p>						
-			<p>浮出层弹窗</p>
-		</div>
-	</div>
-	<div class="future" >
-		<h1>柱子的组件化</h1>
-		<div class="content">
-			内容
-		</div>
+		<h1 class="center">技术要点</h1>		
 	</div>	
-	<div class="future" >
-		<h1>小鸟的移动</h1>
-		<div class="content">
-			内容
-		</div>
-	</div>
-	<div class="future" >
-		<h1>浮出层弹窗</h1>
-		<div class="content">
-			内容
-		</div>
-	</div>
 	<div class="future" >
 		<h1>心得体会</h1>
 		<div class="content">
@@ -120,6 +100,7 @@
 	<div class="future" id="last_page" >
 		<h1>Thank you!</h1>		
 	</div>
+	
 	<div class="btn" id="pre"></div>
 	<div class="btn" id="next"></div>
 
