--- a/JumpySafyPPT/index.html
+++ b/JumpySafyPPT/index.html
@@ -74,7 +74,7 @@
 		<h1>交互设计</h1>		
 		<h2>操作方式</h2>
 		<div  class="content">		
-			<p>PC端：鼠标点击、空格键</p>
+			<p>PC端：鼠标点击</p>
 			<p>移动端：轻触屏幕</p>			
 		</div>
 	</div>
