--- a/BlackJack_v1.1(mobile)/index.html
+++ b/BlackJack_v1.1(mobile)/index.html
@@ -14,11 +14,9 @@
 				<p>Game Introduce</p>
 			</div>	 -->	
 			<div class="mode" id="single">
-				<button type="button" id="single_btn" onclick="window.open('singlePlayer.html', '_self')">Single Mode</button>
+				<button type="button" id="single_btn" onclick="window.open('singlePlayer.html', '_self')">Start Game</button>
 			</div>
-			<!-- <div class="mode" id="double">
-				<button type="button" id="double_btn" onclick="window.open('doublePlayer.html', '_self')">Double Mode</button>
-			</div> -->
+		
 		</div>
 	</div>
 </body>
