移动端微调

--- a/BlackJack_v1.1(mobile)/singlePlayer.html
+++ b/BlackJack_v1.1(mobile)/singlePlayer.html
@@ -18,8 +18,8 @@
 			</div>		
 			<div class="player_wrap">					
 				<div class="pokers" id="poker1">			
-					<img id="poker1_1" src="cardBack.jpg" alt="card1">		
-					<img id="poker1_2" src="cardBack.jpg" alt="card2">			
+					<img id="poker1_1" src="cardBack.png" alt="card1">		
+					<img id="poker1_2" src="cardBack.png" alt="card2">			
 				</div>		
 			</div>
 		</div>		
@@ -30,8 +30,8 @@
 				<div class="result" id="result2">PLAYING</div>									
 			</div>										
 			<div class="pokers" id="poker2">			
-					<img id="poker2_1" src="cardBack.jpg" alt="poker1">		
-					<img id="poker2_2" src="cardBack.jpg" alt="poker2">				
+					<img id="poker2_1" src="cardBack.png" alt="poker1">		
+					<img id="poker2_2" src="cardBack.png" alt="poker2">				
 			</div>
 			<div class="raise" id="raise2">
 				<p class="bet">赌注: <span id="bet2">10</span>$ </p>
