--- a/test/index.html
+++ b/test/index.html
@@ -3,10 +3,18 @@
 <head>
 	<meta charset="UTF-8">
 	<title>test</title>
+	<style>
+	a{
+		display: block;
+		font-size: 20px;
+		margin-top: 100px;
+		text-align: center;
+	}
+	</style>
 </head>
 <body>
-	<a href="demo1.html"></a>
-	<a href="demo2.html"></a>
-	<a href="demo3.html"></a>
+	<a href="demo1.html">demo1</a>
+	<a href="demo2.html">demo2</a>
+	<a href="demo3.html">demo3</a>
 </body>
 </html>
