--- a/test/index.html
+++ b/test/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>test</title>
+	<meta name="viewport" content="width=device-width,height=device-height,inital-scale=1.0,maximum-scale=1.0,user-scalable=no;" />
 	<style>
 	a{
 		display: block;
@@ -13,8 +14,8 @@
 	</style>
 </head>
 <body>
-	<a href="demo1.html">demo1</a>
-	<a href="demo2.html">demo2</a>
-	<a href="demo3.html">demo3</a>
+	<a href="demo1.html" target="_blank">demo1</a>
+	<a href="demo2.html" target="_blank">demo2</a>
+	<a href="demo3.html" target="_blank">demo3</a>
 </body>
 </html>
