--- a/test/demo1.html
+++ b/test/demo1.html
@@ -153,8 +153,8 @@
 	<img src="http://p6.qhimg.com/d/inn/0c4c4851/home-title.png" class="title">
 	<div class="drops1 drops">
 		<img src="http://p1.qhimg.com/d/inn/0c4c4851/home-dropgreen.png" class="green">
-		<img src="http://p5.qhimg.com/d/inn/0c4c4851/home-droppurple.png" class="purple">
-		<img src="http://p2.qhimg.com/d/inn/0c4c4851/imgdrop-yellow.png" class="pink">		
+		<!-- <img src="http://p5.qhimg.com/d/inn/0c4c4851/home-droppurple.png" class="purple"> -->
+		<!-- <img src="http://p2.qhimg.com/d/inn/0c4c4851/imgdrop-yellow.png" class="pink">		 -->
 	</div>
 	<!-- <div class="drops2 drops">
 		<img src="http://p1.qhimg.com/d/inn/0c4c4851/home-dropgreen.png" class="green">
