--- a/test/demo2.html
+++ b/test/demo2.html
@@ -34,7 +34,7 @@
 		}
 		@keyframes drop{
 			20% {transform: translateY(200px);}
-			20.1% {transform: translateY(0);}
+			21% {opacity: 0; transform: translateY(200px);}
 			100% {transform: translateY(0);}
 		}
 		.drops .green{
