--- a/test/demo2.html
+++ b/test/demo2.html
@@ -35,7 +35,7 @@
 		@keyframes drop{
 			20% {transform: translateY(200px);}
 			21% {opacity: 0; transform: translateY(200px);}
-			100% {transform: translateY(0);}
+			100% {transform: translateY(0); opacity: 1;}
 		}
 		.drops .green{
 			position: absolute;
