--- a/test/demo2.html
+++ b/test/demo2.html
@@ -34,8 +34,8 @@
 		}
 		@keyframes drop{
 			20% {transform: translateY(200px);}
-			21% {opacity: 0; transform: translateY(200px);}
-			100% {transform: translateY(0); opacity: 1;}
+			20.1% {transform: translateY(0);}
+			100% {transform: translateY(0);}
 		}
 		.drops .green{
 			position: absolute;
