--- a/test/demo2.html
+++ b/test/demo2.html
@@ -102,8 +102,8 @@
 	<img src="http://p6.qhimg.com/d/inn/0c4c4851/home-title.png" class="title">
 	<div class="drops">
 		<img src="http://p1.qhimg.com/d/inn/0c4c4851/home-dropgreen.png" class="green">
-		<!-- <img src="http://p5.qhimg.com/d/inn/0c4c4851/home-droppurple.png" class="purple"> -->
-		<!-- <img src="http://p2.qhimg.com/d/inn/0c4c4851/imgdrop-yellow.png" class="pink"> -->
+		<img src="http://p5.qhimg.com/d/inn/0c4c4851/home-droppurple.png" class="purple">
+		<img src="http://p2.qhimg.com/d/inn/0c4c4851/imgdrop-yellow.png" class="pink">
 	</div>
 	
 	<script src="https://s.ssl.qhimg.com/lib/jquery/183.js"></script>
