--- a/test/index.html
+++ b/test/index.html
@@ -8,14 +8,17 @@
 	a{
 		display: block;
 		font-size: 20px;
-		margin-top: 100px;
+		margin-top: 50px;
 		text-align: center;
 	}
 	</style>
 </head>
 <body>
-	<a href="demo1.html" target="_blank">demo1</a>
-	<a href="demo2.html" target="_blank">demo2</a>
-	<a href="demo3.html" target="_blank">demo3</a>
+	<a href="demo1-1.html" target="_blank">demo1-1</a>
+	<a href="demo1-2.html" target="_blank">demo1-2</a>
+	<a href="demo1-3.html" target="_blank">demo1-3</a>
+	<a href="demo2-1.html" target="_blank">demo2-1</a>
+	<a href="demo2-2.html" target="_blank">demo2-2</a>
+	<a href="demo2-3.html" target="_blank">demo2-3</a>
 </body>
 </html>
