--- a/test/demo1-2.html
+++ b/test/demo1-2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>demo2</title>
+	<title>demo1-2</title>
 	<meta name="viewport" content="width=device-width,height=device-height,inital-scale=1.0,maximum-scale=1.0,user-scalable=no;" />
 	<style>
 		*{
